--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,17 @@ edition = "2021"
 # TODO: rust-version
 # https://github.com/bincode-org/bincode/issues/543
 
-[dependencies]
-bincode = { version = "^2.0.0-rc.2", optional = true }
-serde = { version = "~1", features = ["derive"], optional = true }
+[dependencies.bincode]
+version = "^2.0.0-rc.2"
+default-features = false
+features = ["derive"]
+optional = true
+
+[dependencies.serde]
+version = "~1"
+default-features = false
+features = ["derive"]
+optional = true
 
 [features]
 default = []
