--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,16 @@ description = "Serial number type with wraparound"
 keywords = ["serial", "number", "rfc-1982"]
 license = "MIT OR Apache-2.0"
 edition = "2021"
+rust-version = "1.56"
 
 # TODO: rust-version
 # https://github.com/bincode-org/bincode/issues/543
 
+[lib]
+doctest = false
+
 [dependencies.bincode]
-version = "^2.0.0-rc.2"
+version = "^2.0.0-rc.3"
 default-features = false
 features = ["derive"]
 optional = true
