--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,7 @@ jobs:
         with:
           command: install
           args: cargo-tarpaulin
+        continue-on-error: true
 
       - name: cargo tarpaulin
         uses: actions-rs/cargo@v1
