--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "serial-num"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Tim Wiechers <mail@timwie.dev>"]
 repository = "https://github.com/timwie/serial-num"
+documentation = "https://docs.rs/serial-num/"
 categories = ["no-std"]
 description = "Serial number type with wraparound"
 keywords = ["serial", "number", "rfc-1982"]
