--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,13 +18,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Rust toolchain with rustup
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@v1
         with:
-          profile: minimal
           toolchain: ${{ matrix.rust }}
-          override: true
           components: rustfmt, clippy
-          target: thumbv6m-none-eabi
+          targets: thumbv6m-none-eabi
 
       - name: Use cache
         uses: actions/cache@v3
@@ -93,11 +91,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@v1
         with:
-          profile: minimal
           toolchain: stable
-          override: true
 
       - run: cargo publish --token ${CRATES_TOKEN}
         env:
