Exclude `.github/` in `Cargo.toml`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["serial", "number", "rfc-1982"]
 license = "MIT OR Apache-2.0"
 edition = "2021"
 rust-version = "1.63"
+exclude = [".github/"]
 
 [dependencies.arbitrary]
 version = "~1"
