--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,8 @@ jobs:
 
       - name: Run Kani Verifier
         uses: model-checking/kani-github-action@v0.27
-        args: --all-features
+        with:
+          args: --all-features
 
   publish:
     name: Upload release to crates.io
