--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: cargo clippy
-        run: cargo clippy -- -D warnings
+        run: cargo clippy
 
       - name: Install Tarpaulin
         run: cargo install cargo-tarpaulin
