--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ arbitrary = ["dep:arbitrary"]
 bincode = ["dep:bincode"]
 bitcode = ["dep:bitcode"]
 borsh = ["dep:borsh"]
-rkyv = ["rkyv/size_32"]
+rkyv = ["rkyv/alloc", "rkyv/size_32"]
 rkyv-safe = ["rkyv/size_32", "rkyv/validation"]
 serde = ["dep:serde"]
 speedy = ["dep:speedy"]
