--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.5.0"
 authors = ["Tim Wiechers <mail@timwie.dev>"]
 repository = "https://github.com/timwie/serial-num"
 documentation = "https://docs.rs/serial-num/"
-categories = ["no-std"]
+categories = ["network-programming", "no-std"]
 description = "Serial number type with wraparound"
-keywords = ["serial", "number", "rfc-1982"]
+keywords = ["serial", "number", "rfc-1982", "ack", "udp"]
 license = "MIT OR Apache-2.0"
 edition = "2021"
 rust-version = "1.66"
