Require more specific `rkyv` version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ default-features = false
 optional = true
 
 [dependencies.rkyv]
-version = "~0"
+version = "0.7.0"
 default-features = false
 optional = true
 
