--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,16 +108,17 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Install Tarpaulin
-        run: cargo install cargo-tarpaulin
-        continue-on-error: true
+      - name: Install cargo-llvm-cov
+        uses: taiki-e/install-action@cargo-llvm-cov
 
-      - name: cargo tarpaulin
-        run: cargo tarpaulin --out Xml --all-features
+      - name: Generate code coverage
+        run: cargo llvm-cov --all-features --ignore-filename-regex tests --lcov --output-path lcov.info
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
-        continue-on-error: true
+        with:
+          files: lcov.info
+          fail_ci_if_error: true
 
   lint:
     name: Lint crate (stable)
@@ -159,7 +160,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Kani Verifier
-        uses: model-checking/kani-github-action@v0.35
+        uses: model-checking/kani-github-action@v0.36
         with:
           args: --all-features
 
