--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,11 @@ keywords = ["serial", "number", "rfc-1982", "ack", "udp"]
 license = "MIT OR Apache-2.0"
 edition = "2021"
 rust-version = "1.66"
-exclude = [".github/", "Justfile"]
+exclude = [
+    ".*",
+    "Justfile",
+    "src/tests*.rs"
+]
 
 [dependencies.arbitrary]
 version = "^1.1.0"
@@ -65,4 +69,4 @@ proptest-arbitrary-interop = "~0.1"
 [dev-dependencies.rkyv]
 version = "^0.7"
 default-features = false
-features = ["alloc"]
+features = ["alloc", "size_32"]
