--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,6 +174,16 @@ jobs:
         with:
           args: --all-features
 
+  deny:
+    name: Lint dependency crates
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: cargo deny
+        uses: EmbarkStudios/cargo-deny-action@v1
+
   publish:
     name: Upload release to crates.io
     needs: [test, verify, fuzzing, lint]  # do not publish if something fails
