--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ version = ">=0.4,<1"
 optional = true
 
 [dependencies.borsh]
-version = "^1.0.0-alpha.6"
+version = "^1"
 default-features = false
 features = ["derive"]
 optional = true
