--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,6 @@ proptest = "~1.3"
 proptest-arbitrary-interop = "~0.1"
 
 [dev-dependencies.rkyv]
-version = "^0.7"
+version = ">=0.7,<1"
 default-features = false
 features = ["alloc", "size_32"]
