--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,12 @@ version = "^1.13"
 features = ["derive"]
 optional = true
 
+[dependencies.postcard]
+version = "^1"
+default-features = false
+features = ["experimental-derive"]
+optional = true
+
 [dependencies.rkyv]
 version = ">=0.7,<1"
 default-features = false
@@ -65,13 +71,15 @@ bincode = ["dep:bincode"]
 bitcode = ["dep:bitcode"]
 borsh = ["dep:borsh"]
 bytemuck = ["dep:bytemuck"]
+postcard = ["dep:postcard"]
 rkyv = ["rkyv/size_32"]
 rkyv-safe = ["rkyv/size_32", "rkyv/validation"]
 serde = ["dep:serde"]
 speedy = ["dep:speedy"]
 
 [dev-dependencies]
-proptest = "~1.3"
+postcard = { version = "^1", default-features = true }
+proptest = "~1.4"
 proptest-arbitrary-interop = "~0.1"
 
 [dev-dependencies.rkyv]
