--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
-          components: rustfmt, clippy, miri
+          components: rustfmt, clippy
           targets: thumbv6m-none-eabi
 
       - name: Use cache
@@ -54,7 +54,10 @@ jobs:
         run: cargo test --all-features
 
       - name: cargo miri test with all features
-        run: cargo +nightly miri test --all-features
+        if: ${{ matrix.rust == 'nightly' }}
+        run: |
+          rustup +nightly component add miri
+          cargo +nightly miri test --all-features
 
   fuzzing:
     name: Fuzz-testing crate
@@ -74,7 +77,7 @@ jobs:
         uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: nightly
-          components: rustfmt, clippy, miri
+          components: rustfmt, clippy
           targets: thumbv6m-none-eabi
 
       - name: Use cache
@@ -107,7 +110,7 @@ jobs:
         uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: stable
-          components: rustfmt, clippy, miri
+          components: rustfmt, clippy
           targets: thumbv6m-none-eabi
 
       - name: Use cache
@@ -146,7 +149,7 @@ jobs:
         uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: stable
-          components: rustfmt, clippy, miri
+          components: rustfmt, clippy
           targets: thumbv6m-none-eabi
 
       - name: Use cache
