--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,7 @@ speedy = ["dep:speedy"]
 postcard = { version = "^1", default-features = true }
 proptest = "~1.4"
 proptest-arbitrary-interop = "~0.1"
+serde_json = "1.0"
 
 [dev-dependencies.rkyv]
 version = ">=0.7,<1"
