--- a/.github/workflows/push_test.yml
+++ b/.github/workflows/push_test.yml
@@ -149,7 +149,7 @@ jobs:
       - name: Run Kani Verifier
         uses: model-checking/kani-github-action@v1
         with:
-          args: --all-features
+          args: --tests --all-features
 
   deny:
     name: Lint dependency crates
