--- a/.github/workflows/push_test.yml
+++ b/.github/workflows/push_test.yml
@@ -5,6 +5,7 @@ on:
   pull_request:
   push:
     paths:
+      - '.github/workflows/push_test.yml'
       - '**.rs'
       - '**.lock'
       - '**.toml'
