Add src/crate.md and src/examples.md

--- a/.github/workflows/push_test.yml
+++ b/.github/workflows/push_test.yml
@@ -6,6 +6,7 @@ on:
   push:
     paths:
       - '.github/workflows/push_test.yml'
+      - 'src/**.md'
       - '**.rs'
       - '**.lock'
       - '**.toml'
