Move clippy config into Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,3 +87,42 @@ serde_json = "1.0"
 version = ">=0.7,<1"
 default-features = false
 features = ["alloc", "size_32"]
+
+[lints.rust]
+elided_lifetimes_in_paths = "deny"
+legacy_derive_helpers = "deny"
+unknown_lints = "deny"
+unreachable_pub = "deny"
+unsafe-code = "deny"
+unused_crate_dependencies = "warn"
+unused_imports = "deny"
+unused_mut = "deny"
+unused_variables = "deny"
+
+[lints.rustdoc]
+bare_urls = "deny"
+broken_intra_doc_links = "deny"
+invalid_codeblock_attributes = "deny"
+invalid_rust_codeblocks = "deny"
+missing_crate_level_docs = "deny"
+private_intra_doc_links = "deny"
+
+[lints.clippy]
+all = {level = "deny", priority = -1 }  # correctness, suspicious, style, complexity, perf
+cargo = {level = "deny", priority = -1 }
+restriction = {level = "deny", priority = -1 }
+pedantic = {level = "deny", priority = -1 }
+
+absolute_paths = "allow"
+blanket_clippy_restriction_lints = "allow"
+decimal_literal_representation = "allow"
+implicit_return = "allow"
+min_ident_chars = "allow"
+missing_docs_in_private_items = "allow"
+missing_trait_methods = "allow"
+question_mark_used = "allow"
+
+arithmetic_side_effects = "warn"
+as_conversions = "warn"
+cast_possible_wrap = "warn"
+integer_division = "warn"
