CI: set job "timeout-minutes"
otherwise jobs may only timeout after 6 hours like here
https://github.com/timwie/serial-num/actions/runs/9087401101/job/24975071685

--- a/.github/workflows/push_tag_publish.yml
+++ b/.github/workflows/push_tag_publish.yml
@@ -10,6 +10,7 @@ jobs:
   test:
     name: Build and test crate
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     strategy:
       fail-fast: false
       matrix:
@@ -18,7 +19,6 @@ jobs:
           - beta
           - nightly
           - 1.70.0  # MSRV
-
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -58,7 +58,8 @@ jobs:
 
   verify:
     name: Model checking
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -71,6 +72,7 @@ jobs:
   deny:
     name: Lint dependency crates
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -82,6 +84,7 @@ jobs:
     name: Upload release to crates.io
     needs: [test, verify, deny]  # do not publish if something fails
     runs-on: ubuntu-latest
+    timeout-minutes: 3
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
