--- a/.github/workflows/sched_fuzzing.yml
+++ b/.github/workflows/sched_fuzzing.yml
@@ -10,6 +10,7 @@ jobs:
   test:
     name: Build and test crate
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     strategy:
       fail-fast: false
       matrix:
@@ -18,7 +19,6 @@ jobs:
           - beta
           - nightly
           - 1.70.0  # MSRV
-
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -59,7 +59,7 @@ jobs:
   lint:
     name: Lint crate (stable)
     runs-on: ubuntu-latest
-
+    timeout-minutes: 3
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -85,13 +85,13 @@ jobs:
   fuzzing:
     name: Fuzz-testing crate (nightly)
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     strategy:
       fail-fast: false
       matrix:
         target:
           - addition
           - increment
-
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
