--- a/.github/workflows/sched_random_features.yml
+++ b/.github/workflows/sched_random_features.yml
@@ -10,6 +10,7 @@ jobs:
   test:
     name: Build and test crate
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     strategy:
       fail-fast: false
       matrix:
@@ -18,7 +19,6 @@ jobs:
           - beta
           - nightly
           - 1.70.0  # MSRV
-
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
