Update lints for 1.79

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -117,6 +117,7 @@ absolute_paths = "allow"
 blanket_clippy_restriction_lints = "allow"
 decimal_literal_representation = "allow"
 implicit_return = "allow"
+integer_division_remainder_used = "allow"
 min_ident_chars = "allow"
 missing_docs_in_private_items = "allow"
 missing_trait_methods = "allow"
